[package]
name = "index_datamanip"
version = "0.5.1"
authors = ["Sif <Sif>"]
description = "Library for working with CoH's Pigg, MessageStore, and Parse7 (bin) formats"
repository = "https://github.com/IndexObscurum/index_datamanip"
documentation = "https://docs.rs/index_datamanip/0.5.0/index_datamanip/"
edition = "2018"
license = "MIT OR Apache-2.0"
include = ["Cargo.toml", "src/**/*.rs", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
anyhow = "1.0"
handlebars = { version = "3.0", features = ["dir_source"] }
libflate = "0.1"
memmap = "0.7"
nom = "5.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"